--- a/index.html
+++ b/index.html
@@ -47,5 +47,9 @@
                     voluptatibus.</p>
             </div>
         </div>
+
+        <div class="footer">
+            <p>&copy; 2019, Felipe</p>
+        </div>
     </body>
 </html>
